--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.2",
     "nodemon": "^2.0.12"
-  }
+  },
+  "engines": {
+        "node": "14.17.5"
+      }
 }
